--- a/A11_ProgramKomnum_25.ipynb
+++ b/A11_ProgramKomnum_25.ipynb
@@ -198,7 +198,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Tambahan: Visualisasi Grafik**\n"
+        "## **Tambahan:** Visualisasi Grafik\n"
       ],
       "metadata": {
         "id": "g5uld9tTxenq"
